<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_vertical">

    <LinearLayout
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="160dp" >
        <View
            android:layout_width="359dp"
            android:layout_height="match_parent">
        </View>

        <ImageButton
            android:id="@+id/btnAdd"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/round_button"
            android:contentDescription="@string/Add_type"
            android:scaleType="center"
            android:src="@drawable/ic_plus"
            app:tint="@color/white"
            android:layout_marginTop="110dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <!-- Row 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <!-- Type Label and Spinner -->
            <TextView
                android:id="@+id/tv_type_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Type"
                android:layout_gravity="center"
                android:layout_marginStart="130dp"/>

            <Spinner
                android:id="@+id/spinner_entry_types"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:minHeight="48dp" />
        </LinearLayout>
        <!-- Row 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <!-- Amount Field -->
            <TextView
                android:id="@+id/amountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Amount"
                android:layout_marginStart="111dp"/>

            <EditText
                android:id="@+id/et_amount"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:autofillHints=""
                android:hint="@string/Amount_2"
                android:inputType="numberDecimal"
                android:minHeight="48dp" />
        </LinearLayout>
        <!-- Row 3 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <!-- Date Field -->
            <TextView
                android:id="@+id/tv_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Date"
                android:layout_marginStart="131dp" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/Date_2"
                android:layout_marginStart="30dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btnEntries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/View_Entries"/>

        <View
            android:layout_width="100dp"
            android:layout_height="match_parent">
        </View>

        <Button
            android:id="@+id/btnTrack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Track"/>
    </LinearLayout>

</LinearLayout>

